# packsnap

./: .gitignore  Cargo.toml  Main.lean  Packsnap.lean  README.md  default.nix  deps.txt  dune-project  flake.nix  importMap.json  lake-manifest.json  lakefile.lean  main.c  main.cpp  main.ts  main.vala  makefile  meson.build  package.json  packsnap.c  packsnap.cpp  packsnap.install  packsnap.opam  provider.hpp  shell.nix
.devcontainer/: devcontainer.json
.github/workflows/: docs.yml  flakehub-publish-tagged.yml  main.yml
Packsnap/: App.lean  Config.lean  Env.lean  Output.lean  Plan.lean  Provider.lean  Util.lean
Packsnap/Providers/: Go.lean  Node.lean
commands/: buildProject.cpp  initProject.cpp
dockerfile/: builder.ml  builder.mli  dune
docs/: .gitignore  flake.nix
docs/components/: nav-link.html  nav-section.html  site-toc.html
docs/layouts/: index.html
docs/pages/: index.md
esy.lock/: index.json
examples/: .gitignore
examples/basic/: packsnap.nix
examples/custom-plan/: flake.nix  main.c  meson.build
examples/deno/: flake.nix  index.ts  packsnap.nix
examples/go/: flake.nix  go.mod  main.go
examples/nextjs/: flake.nix  package-lock.json  package.json  packsnap.nix
examples/node-build-script/: index.ts  package-lock.json  package.json  tsconfig.json
examples/node-start-script/: package-lock.json  package.json
examples/node-ts/: flake.nix  package-lock.json  package.json  packsnap.nix  tsconfig.json
examples/node-yarn/: README.md  package.json
lib/: app.ts  default.nix  dune  logger.ml  misc.nix  sources.nix  util.ml
nix/: sources.json
oci/: descriptor.c  descriptor.cpp  manifest.c  manifest.cpp  meson.build
providers/: all.ml  all.mli  buildPlan.ml  core.mli  dune  mod.ts  node.ml  node.mli  package.ml  plan.ml  provider.mli  providerBase.mli  util.ml
src/: dune
test/: dune
util/: app.hpp  array.c  env.hpp  meson.build  plan.hpp  strsafe.c  strutil.c
(+30 files in other folders)
